# PyGrad

./: .gitignore  Agent.md  CMakeLists.txt  Dockerfile  README.md  build.py  makefile  pyproject.toml  setup.py
.github/workflows/: native-extension-ci.yml
.zed/: settings.json
docs/: current_state.md
examples/: basic_operations.py  buffer_example.py  print_utils.py
grad/: __init__.py  buffer.py  dtype.py  tensor.py
grad/autograd/: __init__.py  function.py  ops.py
grad/autograd/_functions/: __init__.py  tensor.py  utils.py
grad/kernels/: __init__.py
grad/utils/: __init__.py
kernels/: README.md
scripts/: setup_prerequisite.sh
tests/: gradient_check.py  ops_test.py  tensor_test.py  test_autograd.py  test_kernel_import.py
tests/kernels/: test_cpu_kernel.cpp
