[build-system]
requires = ["setuptools>=64", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pygrad"
version = "0.12.61"
description = "A minimalistic autograd engine"
authors = [{ name = "Saksham Bedi", email = "hello@sakshambedi.com" }]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "hypothesis",
    "pre-commit",
    "psutil",
    "reuse",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "hypothesis",
    "pre-commit",
    "psutil",
    "reuse",
]
